@@ -85,6 +85,11 @@ void select_processor(const char *name)
           set_global(GLOBAL_ACT_BANK_ADDR, GLOBAL_ACT_BANK_INV, LFT_TEMPORARY, GVT_CONSTANT, true);
           set_global(GLOBAL_ACT_PAGE_ADDR, GLOBAL_ACT_PAGE_INV, LFT_TEMPORARY, GVT_CONSTANT, true);
 
+          set_global("__GPUTILS_SVN_VERSION",   GPUTILS_SVN_VERSION,   LFT_PERMANENT, GVT_CONSTANT, true);
+          set_global("__GPUTILS_VERSION_MAJOR", GPUTILS_VERSION_MAJOR, LFT_PERMANENT, GVT_CONSTANT, true);
+          set_global("__GPUTILS_VERSION_MINOR", GPUTILS_VERSION_MINOR, LFT_PERMANENT, GVT_CONSTANT, true);
+          set_global("__GPUTILS_VERSION_MICRO", GPUTILS_VERSION_MICRO, LFT_PERMANENT, GVT_CONSTANT, true);
+
           if ((class == PROC_CLASS_GENERIC) || (class == PROC_CLASS_PIC12) ||
               (class == PROC_CLASS_PIC12E)) {
             set_global("__12_BIT",    1,                   LFT_PERMANENT, GVT_CONSTANT, true);
