@@ -1,3 +1,10 @@
+2016-02-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * Makefile.in, */Makefile.in, bootstrap.sh, config.h.in,
+    configure.ac, configure, doc/gputils.lyx, gpasm/processor.c:
+    New constants: __GPUTILS_SVN_VERSION, __GPUTILS_VERSION_MAJOR,
+    __GPUTILS_VERSION_MINOR, __GPUTILS_VERSION_MICRO
+    Feature requests: "#64 Better error handling" 4.
+
 2016-02-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * doc/gputils.lyx, gpasm/processor.c
     New constants: __12_BIT, __14_BIT, __16_BIT
